--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@
                     <div class="video-info">
                         <h3>SIDEMEN UNO: ELIMINATION EDITION</h3>
                         <div class="channel">MoreSidemen</div>
-                        <div class="date">13 hours ago</div>
+                        <div class="date">14 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -189,7 +189,7 @@
                     <div class="video-info">
                         <h3>Daytrading (Real Money) Live Account | 100% Automated Expert Advisor Forex Trading</h3>
                         <div class="channel">René Balke - Fx Bot Trading</div>
-                        <div class="date">16 hours ago</div>
+                        <div class="date">17 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -200,7 +200,7 @@
                     <div class="video-info">
                         <h3>Escape the Prison of the Mind | Eckhart Tolle</h3>
                         <div class="channel">Eckhart Tolle</div>
-                        <div class="date">17 hours ago</div>
+                        <div class="date">18 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -211,7 +211,7 @@
                     <div class="video-info">
                         <h3>The Real Purpose Behind Every Spiritual Retreat</h3>
                         <div class="channel">Eckhart Tolle</div>
-                        <div class="date">17 hours ago</div>
+                        <div class="date">18 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -222,7 +222,7 @@
                     <div class="video-info">
                         <h3>"It's Not a Rapper Bro"💀</h3>
                         <div class="channel">Arthur Frederick</div>
-                        <div class="date">18 hours ago</div>
+                        <div class="date">19 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -378,7 +378,7 @@
                     <div class="video-info">
                         <h3>What's the Chance the Market Closes Red After a Gap Down?</h3>
                         <div class="channel">Quantified Strategies</div>
-                        <div class="date">Yesterday</div>
+                        <div class="date">2 days ago</div>
                     </div>
                 </a>
             </div>
@@ -730,7 +730,7 @@
                     <div class="video-info">
                         <h3>We Tested Every Month — Here’s When Stocks Perform Best</h3>
                         <div class="channel">Quantified Strategies</div>
-                        <div class="date">4 days ago</div>
+                        <div class="date">5 days ago</div>
                     </div>
                 </a>
             </div>
@@ -1744,7 +1744,7 @@
                     <div class="video-info">
                         <h3>Short Trades: Profitable, Yet Underperforming! #shorts</h3>
                         <div class="channel">Algo Trading With Kevin Davey</div>
-                        <div class="date">1 week ago</div>
+                        <div class="date">2 weeks ago</div>
                     </div>
                 </a>
             </div>
@@ -5754,7 +5754,7 @@
                         <div class="video-info">
                             <h3>Daytrading (Real Money) Live Account | 100% Automated Expert Advisor Forex Trading</h3>
                             <div class="channel">René Balke - Fx Bot Trading</div>
-                            <div class="date">16 hours ago</div>
+                            <div class="date">17 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -5833,7 +5833,7 @@
                         <div class="video-info">
                             <h3>What's the Chance the Market Closes Red After a Gap Down?</h3>
                             <div class="channel">Quantified Strategies</div>
-                            <div class="date">Yesterday</div>
+                            <div class="date">2 days ago</div>
                         </div>
                     </a>
                 </div>
@@ -5888,7 +5888,7 @@
                         <div class="video-info">
                             <h3>We Tested Every Month — Here’s When Stocks Perform Best</h3>
                             <div class="channel">Quantified Strategies</div>
-                            <div class="date">4 days ago</div>
+                            <div class="date">5 days ago</div>
                         </div>
                     </a>
                 </div>
@@ -6264,7 +6264,7 @@
                         <div class="video-info">
                             <h3>Short Trades: Profitable, Yet Underperforming! #shorts</h3>
                             <div class="channel">Algo Trading With Kevin Davey</div>
-                            <div class="date">1 week ago</div>
+                            <div class="date">2 weeks ago</div>
                         </div>
                     </a>
                 </div>
@@ -7920,7 +7920,7 @@
                         <div class="video-info">
                             <h3>Escape the Prison of the Mind | Eckhart Tolle</h3>
                             <div class="channel">Eckhart Tolle</div>
-                            <div class="date">17 hours ago</div>
+                            <div class="date">18 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -7931,7 +7931,7 @@
                         <div class="video-info">
                             <h3>The Real Purpose Behind Every Spiritual Retreat</h3>
                             <div class="channel">Eckhart Tolle</div>
-                            <div class="date">17 hours ago</div>
+                            <div class="date">18 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -10232,7 +10232,7 @@
                         <div class="video-info">
                             <h3>SIDEMEN UNO: ELIMINATION EDITION</h3>
                             <div class="channel">MoreSidemen</div>
-                            <div class="date">13 hours ago</div>
+                            <div class="date">14 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -10265,7 +10265,7 @@
                         <div class="video-info">
                             <h3>"It's Not a Rapper Bro"💀</h3>
                             <div class="channel">Arthur Frederick</div>
-                            <div class="date">18 hours ago</div>
+                            <div class="date">19 hours ago</div>
                         </div>
                     </a>
                 </div>
