--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
                     <div class="video-info">
                         <h3>Arthur Goes To His First Rave🕺🏻😂</h3>
                         <div class="channel">Arthur Frederick</div>
-                        <div class="date">8 minutes ago</div>
+                        <div class="date">23 minutes ago</div>
                     </div>
                 </a>
             </div>
@@ -134,7 +134,7 @@
                     <div class="video-info">
                         <h3>BIGGER.. BIGGER.. The Beast Pizza is here!</h3>
                         <div class="channel">Vito Iacopelli</div>
-                        <div class="date">28 minutes ago</div>
+                        <div class="date">43 minutes ago</div>
                     </div>
                 </a>
             </div>
@@ -145,7 +145,7 @@
                     <div class="video-info">
                         <h3>Harnessing Nature to Quiet Mental Chatter | Eckhart Tolle</h3>
                         <div class="channel">Eckhart Tolle</div>
-                        <div class="date">45 minutes ago</div>
+                        <div class="date">1 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -178,7 +178,7 @@
                     <div class="video-info">
                         <h3>This country has abandoned poor people</h3>
                         <div class="channel">Garys Economics</div>
-                        <div class="date">3 hours ago</div>
+                        <div class="date">4 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -222,7 +222,7 @@
                     <div class="video-info">
                         <h3>Michael Singer - Learning to Unblock Your Natural Energy Flow</h3>
                         <div class="channel">Seats of Contemplation</div>
-                        <div class="date">8 hours ago</div>
+                        <div class="date">9 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -244,7 +244,7 @@
                     <div class="video-info">
                         <h3>Algo Entry From AI That Works in Different Futures Markets | MUST Have For Your Strategy Building</h3>
                         <div class="channel">Algo Trading With Kevin Davey</div>
-                        <div class="date">19 hours ago</div>
+                        <div class="date">20 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -266,7 +266,7 @@
                     <div class="video-info">
                         <h3>Try not to Cringe: MILLENNIALS</h3>
                         <div class="channel">ItalianBach</div>
-                        <div class="date">20 hours ago</div>
+                        <div class="date">21 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -1520,9 +1520,9 @@
         
             <div class="video">
                 <a href="https://www.youtube.com/watch?v=yMziuiG_oJ8" target="_blank">
-                    <img src="https://i.ytimg.com/vi/yMziuiG_oJ8/mqdefault.jpg" alt="Do all cheaters think the same?">
+                    <img src="https://i.ytimg.com/vi/yMziuiG_oJ8/mqdefault.jpg" alt="Cheaters who make your blood boil..">
                     <div class="video-info">
-                        <h3>Do all cheaters think the same?</h3>
+                        <h3>Cheaters who make your blood boil..</h3>
                         <div class="channel">Arthur Frederick</div>
                         <div class="date">1 week ago</div>
                     </div>
@@ -5743,7 +5743,7 @@
                         <div class="video-info">
                             <h3>This country has abandoned poor people</h3>
                             <div class="channel">Garys Economics</div>
-                            <div class="date">3 hours ago</div>
+                            <div class="date">4 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -5787,7 +5787,7 @@
                         <div class="video-info">
                             <h3>Algo Entry From AI That Works in Different Futures Markets | MUST Have For Your Strategy Building</h3>
                             <div class="channel">Algo Trading With Kevin Davey</div>
-                            <div class="date">19 hours ago</div>
+                            <div class="date">20 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -7898,7 +7898,7 @@
                         <div class="video-info">
                             <h3>Harnessing Nature to Quiet Mental Chatter | Eckhart Tolle</h3>
                             <div class="channel">Eckhart Tolle</div>
-                            <div class="date">45 minutes ago</div>
+                            <div class="date">1 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -7920,7 +7920,7 @@
                         <div class="video-info">
                             <h3>Michael Singer - Learning to Unblock Your Natural Energy Flow</h3>
                             <div class="channel">Seats of Contemplation</div>
-                            <div class="date">8 hours ago</div>
+                            <div class="date">9 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -9395,7 +9395,7 @@
                         <div class="video-info">
                             <h3>BIGGER.. BIGGER.. The Beast Pizza is here!</h3>
                             <div class="channel">Vito Iacopelli</div>
-                            <div class="date">28 minutes ago</div>
+                            <div class="date">43 minutes ago</div>
                         </div>
                     </a>
                 </div>
@@ -10232,7 +10232,7 @@
                         <div class="video-info">
                             <h3>Arthur Goes To His First Rave🕺🏻😂</h3>
                             <div class="channel">Arthur Frederick</div>
-                            <div class="date">8 minutes ago</div>
+                            <div class="date">23 minutes ago</div>
                         </div>
                     </a>
                 </div>
@@ -10265,7 +10265,7 @@
                         <div class="video-info">
                             <h3>Try not to Cringe: MILLENNIALS</h3>
                             <div class="channel">ItalianBach</div>
-                            <div class="date">20 hours ago</div>
+                            <div class="date">21 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -10646,9 +10646,9 @@
             
                 <div class="video">
                     <a href="https://www.youtube.com/watch?v=yMziuiG_oJ8" target="_blank">
-                        <img src="https://i.ytimg.com/vi/yMziuiG_oJ8/mqdefault.jpg" alt="Do all cheaters think the same?">
+                        <img src="https://i.ytimg.com/vi/yMziuiG_oJ8/mqdefault.jpg" alt="Cheaters who make your blood boil..">
                         <div class="video-info">
-                            <h3>Do all cheaters think the same?</h3>
+                            <h3>Cheaters who make your blood boil..</h3>
                             <div class="channel">Arthur Frederick</div>
                             <div class="date">1 week ago</div>
                         </div>
