--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
                     <div class="video-info">
                         <h3>Arthur Goes To His First Rave🕺🏻😂</h3>
                         <div class="channel">Arthur Frederick</div>
-                        <div class="date">42 minutes ago</div>
+                        <div class="date">51 minutes ago</div>
                     </div>
                 </a>
             </div>
@@ -255,7 +255,7 @@
                     <div class="video-info">
                         <h3>SIDEMEN UNO: ELIMINATION EDITION</h3>
                         <div class="channel">MoreSidemen</div>
-                        <div class="date">20 hours ago</div>
+                        <div class="date">21 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -422,7 +422,7 @@
                     <div class="video-info">
                         <h3>Repeat your pre-trade analysis</h3>
                         <div class="channel">Charlie Burton Trading</div>
-                        <div class="date">Yesterday</div>
+                        <div class="date">2 days ago</div>
                     </div>
                 </a>
             </div>
@@ -5855,7 +5855,7 @@
                         <div class="video-info">
                             <h3>Repeat your pre-trade analysis</h3>
                             <div class="channel">Charlie Burton Trading</div>
-                            <div class="date">Yesterday</div>
+                            <div class="date">2 days ago</div>
                         </div>
                     </a>
                 </div>
@@ -10232,7 +10232,7 @@
                         <div class="video-info">
                             <h3>Arthur Goes To His First Rave🕺🏻😂</h3>
                             <div class="channel">Arthur Frederick</div>
-                            <div class="date">42 minutes ago</div>
+                            <div class="date">51 minutes ago</div>
                         </div>
                     </a>
                 </div>
@@ -10254,7 +10254,7 @@
                         <div class="video-info">
                             <h3>SIDEMEN UNO: ELIMINATION EDITION</h3>
                             <div class="channel">MoreSidemen</div>
-                            <div class="date">20 hours ago</div>
+                            <div class="date">21 hours ago</div>
                         </div>
                     </a>
                 </div>
