--- a/index.html
+++ b/index.html
@@ -119,11 +119,11 @@
     
             <div class="video">
                 <a href="https://www.youtube.com/watch?v=g5F1jYboAes" target="_blank">
-                    <img src="https://i.ytimg.com/vi/g5F1jYboAes/mqdefault.jpg" alt="Touring the UK with ItalianBach">
+                    <img src="https://i.ytimg.com/vi/g5F1jYboAes/mqdefault.jpg" alt="Tour vlog (ft ItalianBach, ChrisMD, George Clarke, Liv & more)">
                     <div class="video-info">
-                        <h3>Touring the UK with ItalianBach</h3>
+                        <h3>Tour vlog (ft ItalianBach, ChrisMD, George Clarke, Liv & more)</h3>
                         <div class="channel">Arthur Frederick</div>
-                        <div class="date">32 minutes ago</div>
+                        <div class="date">46 minutes ago</div>
                     </div>
                 </a>
             </div>
@@ -167,7 +167,7 @@
                     <div class="video-info">
                         <h3>SIDEMEN AMONG US TRIPLE KILL</h3>
                         <div class="channel">MoreSidemen</div>
-                        <div class="date">5 hours ago</div>
+                        <div class="date">6 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -10228,11 +10228,11 @@
         
                 <div class="video">
                     <a href="https://www.youtube.com/watch?v=g5F1jYboAes" target="_blank">
-                        <img src="https://i.ytimg.com/vi/g5F1jYboAes/mqdefault.jpg" alt="Touring the UK with ItalianBach">
+                        <img src="https://i.ytimg.com/vi/g5F1jYboAes/mqdefault.jpg" alt="Tour vlog (ft ItalianBach, ChrisMD, George Clarke, Liv & more)">
                         <div class="video-info">
-                            <h3>Touring the UK with ItalianBach</h3>
+                            <h3>Tour vlog (ft ItalianBach, ChrisMD, George Clarke, Liv & more)</h3>
                             <div class="channel">Arthur Frederick</div>
-                            <div class="date">32 minutes ago</div>
+                            <div class="date">46 minutes ago</div>
                         </div>
                     </a>
                 </div>
@@ -10254,7 +10254,7 @@
                         <div class="video-info">
                             <h3>SIDEMEN AMONG US TRIPLE KILL</h3>
                             <div class="channel">MoreSidemen</div>
-                            <div class="date">5 hours ago</div>
+                            <div class="date">6 hours ago</div>
                         </div>
                     </a>
                 </div>
